ultimi aggiornamenti per l'addestramento dei modelli

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 myenv/*
 .idea/*
 scripts/__pycache__/*
-test_/*
-Output_images_10_minmax/*
+/test_/*
+/Output_images_10_minmax/*
+/Output_images_10/*
